# CS28515-PDElib

./: 3dcoords.py  CMakeLists.txt  README.md  gif_maker.py  graph.py  main.cpp  numvec.cpp  numvec.h  tridiag.cpp  tridiag.h  utility.cpp  utility.h
cmake/: eigen.cmake
libfem/: CMakeLists.txt  FEMLaplacian.cpp  FEMLaplacian.h  Mesh.cpp  Mesh.h  Problem2d.cpp  Problem2d.h  VariMesh.cpp  VariMesh.h  test.cpp  test.h
libnumerical/: CMakeLists.txt  LinearParabolicProblem.cpp  LinearParabolicProblem.h  ParabolicPdeProblem.cpp  ParabolicPdeProblem.h  numericalMethods.cpp  numericalMethods.h  numvec.cpp  numvec.h  parabolicsolver.cpp  parabolicsolver.h  pdesolver.cpp  pdesolver.h  simtime.cpp  simtime.h  tridiag.cpp  tridiag.h  utility.cpp  utility.h
libpdesolvers/: CMakeLists.txt  ParabolicPdeProblem.cpp  ParabolicPdeProblem.h  WaveEquationProblem.cpp  WaveEquationProblem.h  numericalMethods.cpp  numericalMethods.h  simtime.cpp  simtime.h
main/: CMakeLists.txt  main.cpp  pdesolver.cpp  pdesolver.h  proj1.cpp  proj2.cpp  proj3.cpp
test/: CMakeLists.txt
test/testlibnumerical/: CMakeLists.txt  main.cpp  testbackwardsdifference.cpp  testtridiagoperators.cpp  tridiagtest.h
